Added function for creating tables and queries

--- a/dw-sparkify/dwh.cfg
+++ b/dw-sparkify/dwh.cfg
@@ -1,30 +1,14 @@
-[AWS]
-KEY=
-SECRET=
-
-[DWH] 
-DWH_CLUSTER_TYPE=multi-node
-DWH_NUM_NODES=4
-DWH_NODE_TYPE=dc2.large
-
-DWH_IAM_ROLE_NAME=dwhRole
-DWH_CLUSTER_IDENTIFIER=dwhCluster
-DWH_DB=
-DWH_DB_USER=
-DWH_DB_PASSWORD=
-DWH_PORT=5439
-
 [CLUSTER]
-HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+HOST='ktdl-redshift-cluster-1.cfl4l9luhdaw.ap-southeast-1.redshift.amazonaws.com'
+DB_NAME='dev'
+DB_USER='clphan'
+DB_PASSWORD='Clphan259'
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN=
+ARN='arn:aws:iam::367985963033:role/EC2FullAccess'
 
 [S3]
-LOG_DATA='s3://udacity-dend/log_data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song_data'
+LOG_DATA='s3://ktdl-source-data/ktdl-dataset/log_data'
+LOG_JSONPATH='s3://ktdl-source-data/ktdl-dataset/log_json_path.json'
+SONG_DATA='s3://ktdl-source-data/ktdl-dataset/song_data'
