Update role and transform data from staging

--- a/dw-sparkify/dwh.cfg
+++ b/dw-sparkify/dwh.cfg
@@ -6,7 +6,7 @@ DB_PASSWORD='Clphan259'
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN='arn:aws:iam::367985963033:role/EC2FullAccess'
+ARN='arn:aws:iam::367985963033:role/AmazonRedshiftCallOtherService'
 
 [S3]
 LOG_DATA='s3://ktdl-source-data/ktdl-dataset/log_data'
