--- a/clickstream-kafka/iac/mgmt/zkp_config/zookeeper.properties
+++ b/clickstream-kafka/iac/mgmt/zkp_config/zookeeper.properties
@@ -12,9 +12,9 @@ initLimit=10
 # sending a request and getting an acknowledgement
 syncLimit=5
 # The dataLogDir parameters indicates a different directory to use for the transaction logs.
-dataLogDir=/var/zookeeper/log
+# dataLogDir=/var/zookeeper/log
 # Limit the number of client connections
-maxClientCnxns=0
+# maxClientCnxns=0
 # zoo servers
 # these hostnames come from the /etc/hosts file
 server.1=zookeeper1:2888:3888
