--- a/clickstream-kafka/iac/mgmt/kafka_config/server_default.properties
+++ b/clickstream-kafka/iac/mgmt/kafka_config/server_default.properties
@@ -19,9 +19,9 @@ log.dirs=/data/kafka
 # the brokers.
 num.partitions=8
 # we will have 3 brokers so the default replication factor should be 2 or 3
-default.replication.factor=3
-# number of ISR to have in order to minimize data loss
-min.insync.replicas=2
+default.replication.factor=1
+# number of ISR to have in order to minimize data loss default 2
+min.insync.replicas=1
 
 ############################# Log Retention Policy #############################
 
@@ -53,3 +53,7 @@ zookeeper.connection.timeout.ms=6000
 # I recommend you set this to false in production.
 # We'll keep it as true for the course
 auto.create.topics.enable=true
+offsets.topic.replication.factor=1
+# ksqldb error
+transaction.state.log.replication.factor=1
+transaction.state.log.min.isr=1
