update kafka broker config

--- a/clickstream-kafka/iac/mgmt/kafka_config/server.properties
+++ b/clickstream-kafka/iac/mgmt/kafka_config/server.properties
@@ -2,9 +2,9 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=2
+broker.id=1
 # change your.host.name by your machine's IP or hostname
-advertised.listeners=PLAINTEXT://kafka2:9092
+advertised.listeners=PLAINTEXT://kafka1:9092
 
 # Switch to enable topic deletion or not, default value is false
 delete.topic.enable=true
@@ -19,9 +19,9 @@ log.dirs=/data/kafka
 # the brokers.
 num.partitions=8
 # we will have 3 brokers so the default replication factor should be 2 or 3
-default.replication.factor=3
-# number of ISR to have in order to minimize data loss
-min.insync.replicas=2
+default.replication.factor=1
+# number of ISR to have in order to minimize data loss default 2
+min.insync.replicas=1
 
 ############################# Log Retention Policy #############################
 
@@ -53,3 +53,7 @@ zookeeper.connection.timeout.ms=6000
 # I recommend you set this to false in production.
 # We'll keep it as true for the course
 auto.create.topics.enable=true
+offsets.topic.replication.factor=1
+# ksqldb error
+transaction.state.log.replication.factor=1
+transaction.state.log.min.isr=1
